crates/bsql/tests/compile_fail/invalid_table.rs
fn main() {
    let _ = bsql::query!(
        "SELECT id FROM nonexistent_table_xyz WHERE id = 1"
    );
}
